test/functions/jplevyak/intent-8-error.good
intent-8-error.chpl:8: error: non-lvalue actual passed to out argument
